init-container-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-container-demo
spec:
  # replicas: 5
  selector:
    matchLabels:
      name: init-container-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: init-container-demo
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
      volumes:
      - name: workdir
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: init-container-demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: init-container-demo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: init-container-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: default
spec:
  rules:
  - host: thanhnt.elixir.vn
    http:
      paths:
      - path: /initcontainer/?(.*)
        pathType: Prefix
        backend:
          service:
            name: init-container-demo
            port:
              number: 80
